--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -421,9 +421,9 @@ plugins:
         var gitalk = new Gitalk({
           clientID: 'cd9ab4dd65c566d2a710',
           clientSecret: '5c81204e32af48795836efb63ddf077a6b15755a',
-          repo: 'GitHub repo',
-          owner: 'GitHub repo owner',
-          admin: ['GitHub repo owner and collaborators, only these guys can initialize github issues'],
+          repo: 'suzhihao/wobushi.top',
+          owner: 'suzhihao',
+          admin: ['suzhihao'],
           id: location.pathname,      // Ensure uniqueness and length less than 50
           distractionFreeMode: false  // Facebook-like distraction free mode
         })
