--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -418,16 +418,15 @@ plugins:
     template: |
       <div id="gitalk-container"></div>
       <script>
-        var gitalk = new Gitalk({
+        new Gitalk({
           clientID: 'cd9ab4dd65c566d2a710',
           clientSecret: '5c81204e32af48795836efb63ddf077a6b15755a',
-          repo: 'suzhihao/wobushi.top',
+          repo: 'wobushi.top',
           owner: 'suzhihao',
           admin: ['suzhihao'],
-          id: location.pathname,      // Ensure uniqueness and length less than 50
+          id: md5(location.pathname),      // Ensure uniqueness and length less than 50
           distractionFreeMode: false  // Facebook-like distraction free mode
-        })
-        gitalk.render('gitalk-container')
+        }).render('gitalk-container')
       </script>
 
   # Built-in plugins
