--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -402,6 +402,7 @@ pwa:
 plugins:
   # inside 主题没有引入 jQuery 框架，需要手动引入
   - //cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js
+  - //cdn.bootcdn.net/ajax/libs/blueimp-md5/2.16.0/js/md5.min.js
   - //netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
   - position: sidebar
     template: |
