--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -340,7 +340,7 @@ data_prefix:
 data_dir:
 
 # Favicon, default to `favicon.ico`
-favicon:
+favicon: /favicon.ico
 
 # Google analytics
 # ga: UA-00000000-0
