feat: 新增搜索相关

--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -123,6 +123,7 @@ profile:
 # Sidebar navigation links
 menu:
   主页: /
+  搜索: /search
   关于我: /about
   Github: https://github.com/suzhihao
 
@@ -212,18 +213,18 @@ category:
 # Search
 search:
   # Display a quick search button in fab
-  # fab: true
+  fab: true
 
   # Render a standalone searh page which can be configured in sidebar menu such as `Search: /search`
-  # page: true
+  page: true
 
   # Local search
-  # adapter:
-  #   range:
-  #     - post
-  #     - page
-  #   per_page: 20
-  #   limit: 10000
+  adapter:
+    range:
+      - post
+      - page
+    per_page: 20
+    limit: 10000
 
   # Custom search
   # adapter:
