新增两篇文章

--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -118,7 +118,7 @@ profile:
   # You can set Avatar URL directly
   avatar: /images/avatar.jpg
 
-  bio: 学习的能力比掌握的知识更加重要。
+  bio: 我还不是TOP，放开我，我还能学！
 
 # Sidebar navigation links
 menu:
